[package]
name = "travelling-salesman"
version = "0.1.0"
authors = ["Giovanni-Tedesco <giotedesco33@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genetic = {git = "https://github.com/Giovanni-Tedesco/RS-Genetic", branch="main"}
rand = "0.8"